Fix layout issue for 'inspecte user' popup.

--- a/Main/Source/ApacheAssets/dnaimages/dna_messageboard/style/generic_messageboard_v2.css
+++ b/Main/Source/ApacheAssets/dnaimages/dna_messageboard/style/generic_messageboard_v2.css
@@ -823,7 +823,7 @@ p.flag a {
 }
 .dna-boards .submit, .dna-boards .cancel {
   margin:10px; 
-  padding:4px;;
+  padding:4px;
   float:right;
 }
 
